# catrius_blog_2

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
blog/: admin.py  models.py  urls.py  utils.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_alter_post_slug.py  0004_category_slug_page_slug.py  0005_alter_page_content.py  0006_post_thumbnail.py  0007_alter_post_category.py  0008_alter_post_content.py  0009_alter_post_options.py  0010_alter_page_options.py  0011_post_highlight.py  0012_comment.py
blog/models/: __init__.py  category.py  comment.py  page.py  post.py
blog/sitemaps/: __init__.py  category.py  page.py  post.py
blog/view_sets/: category_view_set.py  comment_view_set.py  page_view_set.py  post_view_set.py
catrius_blog_2/: asgi.py  s3.py  settings.py  urls.py  wsgi.py
scripts/: deploy.sh
